test/errors/type/table/__len.yasl
echo mt.lookup({}, .__len)(1)
